# email-waitlist

./: .env  .gitignore  README.md  lifespan.py  main.py  pyproject.toml  requirements.txt  run.sh
configs/: database.py  rabbit_mq.py
models/: waitlist.py
schemas/: waitlist.py
services/: database.py
src/models/: wait_list.py
src/services/: superbase_manager.py
utils/: is_valid_email.py
