[project]
name = "email-waitlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.1",
    "uvicorn[standard]>=0.40.0",
]
